--- a/main.tex
+++ b/main.tex
@@ -69,7 +69,7 @@ titlepage,numbers=noenddot,%1headlines,
 \newcommand{\myUni}{University of Sussex\xspace}
 \newcommand{\myLocation}{Hove\xspace}
 \newcommand{\myTime}{March 2021\xspace}
-\newcommand{\myVersion}{Thesis v0.5}
+\newcommand{\myVersion}{Thesis v1.0-rc1}
 
 % ********************************************************************
 % Setup, finetuning, and useful commands
