Make a sentence slightly nicer

--- a/ch/2-related-work.tex
+++ b/ch/2-related-work.tex
@@ -1216,7 +1216,7 @@ A second model is then trained, for which those samples are downweighted for whi
 the hope being that by learning the ``hard'' samples, the model learns the correct relationship.
 Both \citet{HasSriNamLia18,nam2020learning} frame their methods as improving accuracy on an unbiased test set
 and do not make references to fairness metrics,
-but there is nevertheless a strong connection to the fairness literature.
+but a strong connection to the fairness literature nevertheless exists.
 
 % \section{Recent developments in Fairness}\label{recent-developments-in-fairness}
 % At this point, fairness in machine learning has come a long way.
