--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -130,7 +130,7 @@
   \markboth{\spacedlowsmallcaps{Glossary}}{\spacedlowsmallcaps{Glossary}}
   \begin{glossaryenv}
     \entry{Adult/Census Income}{A popular fairness dataset based on census data from the U.S.}
-    \entry{CelebA}{Face attributes dataset with more than 200K celebrity images}
+    \entry{CelebA}{Face attributes dataset with more than 200K ce\-le\-bri\-ty images}
     \entry{MNIST}{Dataset of handwritten digits}
     \entry{demographic group}{Set induced by the sensitive attribute}
     \entry{fairness definition}{An aspirational (often legally inspired) specification of a fair classifier}
