--- a/FrontBackmatter/Titlepage.tex
+++ b/FrontBackmatter/Titlepage.tex
@@ -29,7 +29,7 @@
         \myFaculty \\
         \myUni \\ \bigskip
 
-        \myTime\ -- \myVersion
+        \myTime%\ -- \myVersion
 
         \vfill
 
