--- a/allreferences.bib
+++ b/allreferences.bib
@@ -555,7 +555,7 @@
   title		= {On the (im) possibility of fairness},
   author	= {Friedler, Sorelle A and Scheidegger, Carlos and
 		  Venkatasubramanian, Suresh},
-  journal	= {arXiv preprint arXiv: 1609.07236},
+  journal	= {arXiv preprint arXiv:1609.07236},
   year		= {2016}
 }
 
@@ -1089,7 +1089,7 @@
   year		= {2020},
   publisher	= {Springer International Publishing},
   doi		= {10.1007/978-3-030-58604-1},
-  booktitle	= {European Conference on Computer Vision (ECCV)},
+  booktitle	= {Eu\-ro\-pe\-an Conference on Computer Vision (ECCV)},
   numpages	= {779},
   location	= {Glasgow, UK},
   sortname	= {Kehrenberg},
@@ -2234,4 +2234,14 @@ URL={http://yann.lecun.com/exdb/mnist/}
   booktitle	= {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages={41--50},
   year={2019}
+}
+
+@InProceedings{yudkowsky2011complex,
+author="Yudkowsky, Eliezer",
+title="Complex Value Systems in Friendly AI",
+booktitle="Artificial General Intelligence",
+year="2011",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="388--393"
 }
