--- a/ch/6-discussion.tex
+++ b/ch/6-discussion.tex
@@ -103,8 +103,8 @@ and the method in \chapref{ch:paper3} has the same capability
 However, this is only a beginning.
 It is still not easy to notice that a given dataset has problems,
 and machines on their own cannot notice the problem,
-because they do not (yet) have a complete understanding about what it is that humans care about.
-Human preferences are incredibly complex and hard to predict for today's algorithms.
+because they do not (yet) have a complete understanding about what it is that humans care about;
+human preferences are incredibly complex \citep{yudkowsky2011complex} and hard to predict for today's algorithms.
 Thus, it is important that machines get feedback early and often,
 to keep them aligned with human goals.
 (The aforementioned \citet{stiennon2020learning} is arguably an example of this.)
